<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".NikeKorokiActivity">

    <ImageView
        android:id="@+id/nike_koroki_picture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/nike_kokori"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nike_koroki_picture"/>

    <TextView
        android:id="@+id/nike_koroki_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nike_kokori"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@id/nike_koroki_picture"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/nike_koroki_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nike_korori_age"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toBottomOf="@id/nike_koroki_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/nike_koroki_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:text="@string/nike_korori_descr"
        app:layout_constraintTop_toBottomOf="@id/nike_koroki_age"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>